--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,17 @@
 </head>
 <body>
 
-<%= yield %>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header pull-right">
+        <h3>ClickBait</h3>
+        <small>Logged in as: <%= current_user.id %></small>
+      </div>
+    </div>
+  </nav>
 
+  <div class='container'>
+    <%= yield %>
+  </div>
 </body>
 </html>
