--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
+<!-- not implemented for demo -->
+
 <h2>Contests | <a href="/leaderboard">Leaderboard</a></h2>
 <table class="table table-hover">
   <tr>
