--- a/app/views/contests/show.html.erb
+++ b/app/views/contests/show.html.erb
@@ -1,3 +1,3 @@
-<h2>Contest: <%= @contest.prize %></h2>
+<h2>Today's Contest: <%= @contest.prize %></h2>
 <h3>Leaderboard: <%= @leaderboard %></h3>
 <h3>Winner: <%= @winner %></h3>
